# tfrt2

./: .gitignore  README.md  requirements.txt  setup.cfg
dev/: fancy_optics.py
dev/cplane_goal/: optical_script.py
dev/cylinder/: optical_script.py
dev/echo_server/: echo_server.py
dev/flat_optimize/: optical_script.py
dev/goal_projection/: optical_script.py
dev/index_test/: optical_script.py
dev/parametric_optic_dev/: optical_script.py
dev/performance_testing/: intersection_engine.py
dev/planar_lens_remesh/: optical_script.py
dev/prism/: optical_script.py
dev/simple_lens_optimize/: optical_script.py
dev/smoother/: optical_script.py
dev/source_dev/: optical_script.py
dev/spectrums/: spd_converter.py  spectums.py
dev/test_parametric_filters/: optical_script.py  optical_system.py
dev/test_source/: optical_script.py
dev/trace_dev/: optical_script.py
dev/trace_performance/: optical_script.py
src/: client.py  client_TCP_widget.py  component_widgets.py  distributions.py  drawing.py  fancy_optics.py  mesh_tools.py  optical_system.py  optics.py  settings.py  sources.py  tcp_base.py  trace_engine.py  tracing_TCP_server.py  wavelength.py
src/tfrt2/: client_TCP_widget.py  component_widgets.py  distributions.py  drawing.py  goal.py  mesh_tools.py  optical_system.py  optics.py  optimization_controls.py  optimize.py  performance_tracer.py  remote_controls.py  settings.py  sources.py  tcp_base.py  tfquaternion.py  trace_engine.py  vector_generator.py  wavelength.py
src/tfrt2_client/: client.py  parameter_controller.py
(+4 files in other folders)
