[metadata]
name = tfrt2
version = 0.0.1
author = Eric Poppenheimer
author_email = ecpoppenheimer@gmail.com
description = A remake of tfrt, which is a Tensorflow powered optical design tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecpoppenheimer/tfrt2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src